--- a/imagenes bestialc 2008.html
+++ b/imagenes bestialc 2008.html
@@ -28,12 +28,12 @@
   </head>
   <body>
     <!-- Logo que SIEMPRE vuelve a index.htm -->
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
       <ul>
-        <li><a href="inicio.htm">Inicio</a></li>
+ <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
@@ -48,62 +48,62 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>13º Bestialc (2008)</h2>
-        <a href="imagenes/13%20bestialc%202008/00.jpg" target="_blank"> <img src="imagenes/13%20bestialc%202008/00.jpg"
-            alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/00a.jpg"
+        <a href="imagenes/13%20bestialc%202008/00.jpg" target="_blank"> <img src="imagenes/13%20bestialc%202008/00.jpg"
+            alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/00a.jpg"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/00a.jpg" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/01.jpg" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/01.jpg" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/02.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/01.jpg" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/01.jpg" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/02.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/02.JPG" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/03.JPG" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/03.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/04.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/03.JPG" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/03.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/04.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/04.JPG" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/05.JPG" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/05.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/09.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/05.JPG" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/05.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/09.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/09.JPG" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/10.JPG" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/10.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/11.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/10.JPG" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/10.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/11.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/11.JPG" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/12.JPG" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/12.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/13.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/12.JPG" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/12.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/13.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/13.JPG" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/14.jpg" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/14.jpg" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/15.jpg"
+        </a> <a href="imagenes/13%20bestialc%202008/14.jpg" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/14.jpg" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/15.jpg"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/15.jpg" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/16.jpg" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/16.jpg" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/17.jpg"
+        </a> <a href="imagenes/13%20bestialc%202008/16.jpg" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/16.jpg" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/17.jpg"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/17.jpg" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/18.JPG" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/18.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/19.jpg"
+        </a> <a href="imagenes/13%20bestialc%202008/18.JPG" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/18.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/19.jpg"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/19.jpg" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/20.JPG" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/20.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/21.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/20.JPG" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/20.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/21.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/21.JPG" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/22.png" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/22.png" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/23.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/22.png" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/22.png" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/23.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/23.JPG" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/24.png" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/24.png" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/25.png"
+        </a> <a href="imagenes/13%20bestialc%202008/24.png" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/24.png" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/25.png"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/25.png" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/26.png" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/26.png" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/27.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/26.png" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/26.png" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/27.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/27.JPG" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/28.JPG" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/28.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/29.jpg"
+        </a> <a href="imagenes/13%20bestialc%202008/28.JPG" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/28.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/29.jpg"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/29.jpg" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/30.jpg" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/30.jpg" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/31.jpg"
+        </a> <a href="imagenes/13%20bestialc%202008/30.jpg" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/30.jpg" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/31.jpg"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/31.jpg" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/32.png" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/32.png" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/33.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/32.png" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/32.png" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/33.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/33.JPG" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/34.jpg" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/34.jpg" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/35.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/34.jpg" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/34.jpg" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/35.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/35.JPG" alt="foto2">
-        </a> <a href="imagenes/13%20bestialc%202008/36.JPG" target="_blank"> <img
-            src="imagenes/13%20bestialc%202008/36.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/37.JPG"
+        </a> <a href="imagenes/13%20bestialc%202008/36.JPG" target="_blank"> <img
+            src="imagenes/13%20bestialc%202008/36.JPG" alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/37.JPG"
           target="_blank"> <img src="imagenes/13%20bestialc%202008/37.JPG" alt="foto2">
         </a>
-        <a href="imagenes/13%20bestialc%202008/38.jpg" target="_blank"> <img src="imagenes/13%20bestialc%202008/38.jpg"
+        <a href="imagenes/13%20bestialc%202008/38.jpg" target="_blank"> <img src="imagenes/13%20bestialc%202008/38.jpg"
             alt="foto1"> </a> <a href="imagenes/13%20bestialc%202008/39.JPG" target="_blank">
           <img src="imagenes/13%20bestialc%202008/39.JPG" alt="foto2"> </a> </section>
       <!-- Volver abajo -->
