--- a/imagenes legend 2010.html
+++ b/imagenes legend 2010.html
@@ -34,7 +34,7 @@
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
       <ul>
-        <li><a href="inicio.htm">Inicio</a></li>
+ <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
