--- a/letras.htm
+++ b/letras.htm
@@ -12,13 +12,12 @@
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
       <ul>
-        <li><a href="inicio.htm">Inicio</a></li>
+ <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
         <li><a href="letras.htm" class="active">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a href="prensa.htm">Prensa</a></li>
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
