--- a/biografia.htm
+++ b/biografia.htm
@@ -10,13 +10,12 @@
     </a>
     <nav class="nav-principal">
       <ul>
-        <li><a href="inicio.htm">Inicio</a></li>
+ <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm" class="active">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a href="prensa.htm">Prensa</a></li>
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
@@ -73,8 +72,8 @@
           guasa inolvidables tanto para sus miembros como para sus seguidores.</p>
         <p class="center"><br>
         </p>
-        <p class="center"><a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
-              src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
+        <p class="center"><a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
+              src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
               width="320"></a></p>
         <p class="center"><br>
         </p>
