--- a/discografia.htm
+++ b/discografia.htm
@@ -8,18 +8,17 @@
   </head>
   <body>
     <!-- Logo que SIEMPRE vuelve a index.htm -->
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
       <ul>
-        <li><a href="inicio.htm">Inicio</a></li>
+ <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm" class="active">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a href="prensa.htm">Prensa</a></li>
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
@@ -92,7 +91,7 @@
       <hr>
       <section class="disco">
         <h2>Resurrekción</h2>
-        <a target="_blank" href="imagenes/dvd600.jpg"> <img src="imagenes/dvd150.jpg"
+        <a target="_blank" href="imagenes/dvd600.jpg"> <img src="imagenes/dvd150.jpg"
             alt="DVD Resurrección"> </a>
         <p>Dvd grabado el día 30 de Agosto de 2008, durante el XIII Bestialc en
           L'Alcora.<br>
@@ -176,7 +175,7 @@
       <hr>
       <section class="disco">
         <h2>1ª Komunión (LP)</h2>
-        <a target="_blank" href="imagenes/1komunion1.jpg"> <img src="imagenes/_1_komunion1.jpg"
+        <a target="_blank" href="imagenes/1komunion1.jpg"> <img src="imagenes/_1_komunion1.jpg"
             alt="Portada LP"> </a> <a target="_blank" href="imagenes/1komunion2.jpg">
           <img src="imagenes/_1_komunion2.jpg" alt="Contraportada LP"> </a>
         <p>El LP, editado en vinilo, claro... lo de los cd's era muy marciano
@@ -234,7 +233,7 @@
         <p> </p>
         <hr>
         <h2>&nbsp;"Tour 89"</h2>
-        <a href="imagenes/maqueta2.jpg" target="_blank"><img src="imagenes/_maqueta2.jpg"
+        <a href="imagenes/maqueta2.jpg" target="_blank"><img src="imagenes/_maqueta2.jpg"
             alt="caratula maqueta" title="maqueta" style="width: 181px; height: 115px;"></a><br>
         <br>
         Maqueta grabada a principios de 1989, en la terraza de un maset,
@@ -277,8 +276,8 @@
       <hr>
       <section class="disco">
         <h2>&nbsp;"Circuito Rock"</h2>
-        <a href="imagenes/singleivaj1.jpg" target="_blank"><img src="imagenes/_single_ivaj1.jpg"
-            alt=""></a><a href="imagenes/singleivaj2.jpg" target="_blank"><img src="imagenes/_single_ivaj2.jpg"
+        <a href="imagenes/singleivaj1.jpg" target="_blank"><img src="imagenes/_single_ivaj1.jpg"
+            alt=""></a><a href="imagenes/singleivaj2.jpg" target="_blank"><img src="imagenes/_single_ivaj2.jpg"
             alt=""></a><br>
         Single patrocinado por el Institut Valencià de la Joventut (IVAJ), por
         ser ganadores del concurso Rock 89, tras la actuación en directo en
@@ -295,7 +294,7 @@
       <hr>
       <section class="disco">
         <h2>&nbsp;El Gallinero Eléctrico Uno</h2>
-        <a href="imagenes/gallinero1.jpg" target="_blank"><img src="imagenes/_gallinero1.jpg"></a><a
+        <a href="imagenes/gallinero1.jpg" target="_blank"><img src="imagenes/_gallinero1.jpg"></a><a
           href="imagenes/gallinero2.jpg" target="_blank"><img src="imagenes/_gallinero2.jpg"></a><br>
         Recopilatorio en formato single, en el cual grabaron aparte de nosotros:
         Dorados Graueros, The Joke y Tom Bombadil.<br>
@@ -313,8 +312,8 @@
       <hr>
       <section class="disco">
         <h2>Matraka Monsters</h2>
-        <a href="imagenes/matraka1.jpg" target="_blank"><img src="imagenes/_matraka_1.jpg"
-            alt=""></a><a href="imagenes/matraka2.jpg" target="_blank"><img src="imagenes/_matraka_2.jpg"
+        <a href="imagenes/matraka1.jpg" target="_blank"><img src="imagenes/_matraka_1.jpg"
+            alt=""></a><a href="imagenes/matraka2.jpg" target="_blank"><img src="imagenes/_matraka_2.jpg"
             alt=""></a><br>
         Recopilatorio en formato LP, con: Los Perreros, The Mentes, Barro, Goma
         2, El Último Ke Zierre y Rottest Slag.<br>
@@ -332,8 +331,8 @@
       <hr>
       <section class="disco">
         <h2>Con M de Morcillo (Tributo)</h2>
-        <a href="imagenes/Morcillo1[640x480].jpg" target="_blank"><img src="imagenes/Morcillo1[150]%20[].jpg"
-            alt=""></a><a href="imagenes/Morcillo2[640x480].jpg" target="_blank"><img
+        <a href="imagenes/Morcillo1[640x480].jpg" target="_blank"><img src="imagenes/Morcillo1[150]%20[].jpg"
+            alt=""></a><a href="imagenes/Morcillo2[640x480].jpg" target="_blank"><img
             src="imagenes/Morcillo2%20-%20150.jpg" alt="" style="width: 193px; height: 150px;"></a><br>
         Recopilatorio tributo a Juan Morcillo, en donde 20 grupos versionean
         otros tantos temas de Morcillo.<br>
@@ -351,8 +350,8 @@
       <hr>
       <section class="disco">
         <h2>&nbsp;Rocke'n'Babia</h2>
-        <a href="imagenes/babia2.jpg" target="_blank"><img src="imagenes/_babia2.jpg"
-            alt=""></a><a href="imagenes/babia1.jpg" target="_blank"><img src="imagenes/_babia1.jpg"
+        <a href="imagenes/babia2.jpg" target="_blank"><img src="imagenes/_babia2.jpg"
+            alt=""></a><a href="imagenes/babia1.jpg" target="_blank"><img src="imagenes/_babia1.jpg"
             alt=""></a><br>
         Lp recopilatorio de actuaciones en directo en Babia Rock-Bar, de
         Valencia. En un principio, se iba a editar un vídeo, ya que se gravaban
@@ -374,7 +373,7 @@
       <hr>
       <section class="disco">
         <h2>&nbsp;HISTORIA DE LA MÚSICA POP EN CASTELLÓN</h2>
-        <a href="imagenes/pop%20castellon%20800%20[800x600].jpg" target="_blank"><img
+        <a href="imagenes/pop%20castellon%20800%20[800x600].jpg" target="_blank"><img
             src="imagenes/pop%20castellon%20800%20[800x600]%20[200].jpg" alt=""></a><br>
         Este es un curioso Disco-Libro, en el cual se recoge la historia del pop
         (y rock) en Castellón en las décadas de los 60's, 70's, 80's, 90'ss y
@@ -397,7 +396,7 @@
       <hr>
       <section class="disco">
         <h2>La Figa Palera</h2>
-        <a href="imagenes/la_figa_palera.jpg" target="_blank"><img src="imagenes/_la_figa_palera.jpg"
+        <a href="imagenes/la_figa_palera.jpg" target="_blank"><img src="imagenes/_la_figa_palera.jpg"
             alt="" style="width: 185px; height: 113px;"></a><br>
         Casette grabado en directo en la 2ª Edición Rock Radical a Vila-Real, el
         día 13 de Mayo de 1989. El promotor del evento fué Julio Matraka.<br>
@@ -420,7 +419,7 @@
       <hr>
       <section class="disco">
         <h2>Heroína No!</h2>
-        <a href="imagenes/antiheroina.jpg" target="_blank"><img src="imagenes/_antiheroina.jpg"
+        <a href="imagenes/antiheroina.jpg" target="_blank"><img src="imagenes/_antiheroina.jpg"
             alt=""></a><br>
         Esta cinta fué el resultado de un concierto que fué organizado en
         Valencia, el 30 de Junio de 1990, a cargo de distintos colectivos
