--- a/imagenes.htm
+++ b/imagenes.htm
@@ -23,12 +23,12 @@
 </style> </head>
   <body>
     <!-- Logo que SIEMPRE vuelve a index.htm -->
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal -->
     <nav class="nav-principal">
       <ul>
-        <li><a href="inicio.htm">Inicio</a></li>
+ 	<li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
@@ -63,42 +63,39 @@
           <a href="imagenes%20viverock.html" target="_top">II Vive Rock (2011)</a>
         </div>
         <div class="subapartado"> <a href="imagenes%20opal.html" target="_top">
-            <img src="imagenes/opal%202012/MUSICA-POP-540PX.jpg" alt="Sala Opal">
-          </a><br>
-          <a href="galeria-2008-2022.htm">Sala Opal (2012)</a></div>
+            <img src="imagenes/opal%202012/00.jpg" alt="Sala Opal"> </a><br>
+          <a href="file:///C:/Users/1akom/Desktop/web%20kom%20-%20copia/imagenes%20opal.html"
+            target="_top">Sala Opal (2012)</a></div>
         <div class="subapartado"> <a href="imagenes%20legend%202012.html" target="_top">
-            <img src="imagenes/581197_217318588412880_530063187_n.jpg" alt="Pub D'Legend 2012">
-          </a><br>
+            <img src="imagenes/legend%202012/00.jpg" alt="Pub D'Legend 2012"> </a><br>
           <a href="imagenes%20legend%202012.html" target="_top">Pub D'Legend
             (2012)</a> </div>
-        <div class="subapartado"> <a href="galeria-2008-2022.htm"> <imagenes src="581197_217318588412880_530063187_n.jpg"
-              alt="18º Bestialc"> </imagenes></a><a href="imagenes%20bestialc%202013.html"
-            target="_top"><img src="imagenes/18%20bestialc%202013/bestialc2013%20[1024x768].jpg"
-              alt="bestialc 2013"></a><br>
+        <div class="subapartado"> <a href="galeria-2008-2022.htm"> <imagenes src="581197_217318588412880_530063187_n.jpg"
+              alt="18º Bestialc"> </imagenes></a><a href="imagenes%20bestialc%202013.html"
+            target="_top"><img src="imagenes/18%20bestialc%202013/00.jpg" alt="bestialc 2013"></a><br>
           <a href="imagenes%20bestialc%202013.html" target="_top">18º Bestialc
             (2013)</a> </div>
         <div class="subapartado"> <a href="imagenes%20ultrasons%202013.html" target="_top">
-            <img src="imagenes/ultrasons%202013/504154552_9906735869380990_676120536015087471_n.jpg"
-              alt="4º Ultrasons (2013)"> </a><br>
+            <img src="imagenes/ultrasons%202013/00.jpg" alt="4º Ultrasons (2013)">
+          </a><br>
           <a href="imagenes%20ultrasons%202013.html" target="_top">4º Ultrasons
             (2013)</a> </div>
         <div class="subapartado"> <a href="imagenes%20veneno%20stereo.html" target="_top">
-            <img src="imagenes/veneno%20stereo%202013/1eraKOMUNION.jpg" alt="Veneno Stereo">
+            <img src="imagenes/veneno%20stereo%202013/00.jpg" alt="Veneno Stereo">
           </a><br>
           <a href="imagenes%20veneno%20stereo.html" target="_top">Veneno Stereo
             (2013)</a></div>
         <div class="subapartado"> <a href="imagenes%20magdalena%20fest.html" target="_top">
-            <img src="imagenes/magdalena%20fest%202014/1962669_738309252859601_1684274662_n.jpg"
-              alt="Magdalena Fest"> </a><br>
+            <img src="imagenes/magdalena%20fest%202014/00.jpg" alt="Magdalena Fest">
+          </a><br>
           <a href="imagenes%20magdalena%20fest.html" target="_top">Magdalena
             Fest (2014)</a> </div>
         <div class="subapartado"> <a href="imagenes%20terra.html" target="_top">
-            <img src="imagenes/terra%202020/82870247_3048632631827240_5854989509141200896_n.jpg"
-              alt="Pub Terra"> </a><br>
+            <img src="imagenes/terra%202020/00.jpg" alt="Pub Terra"> </a><br>
           <a href="imagenes%20terra.html" target="_top">Pub Terra (2020)</a> </div>
         <div class="subapartado"> <a href="imagenes%20ultrasons%202022.html" target="_top">
-            <img src="imagenes/13%20ultrasons%202022/481447093_1217258826974311_6857703801058632182_n.jpg"
-              alt="13º Ultrasons"> </a><br>
+            <img src="imagenes/13%20ultrasons%202022/00.jpg" alt="13º Ultrasons">
+          </a><br>
           <a href="imagenes%20ultrasons%202022.html" target="_top">13º Ultrasons
             (2022)<br>
           </a></div>
