--- a/videos.htm
+++ b/videos.htm
@@ -48,13 +48,12 @@
       </a> </header>
     <nav class="nav-principal">
       <ul>
-        <li><a href="inicio.htm">Inicio</a></li>
+        <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm" class="active">Vídeos</a></li>
-        <li><a href="prensa.htm">Prensa</a></li>
         <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
@@ -64,9 +63,9 @@
         <div class="video-single">
           <h3 class="video-title">Llum d'estiu - 1989</h3>
           <iframe src="https://www.youtube.com/embed/5hAwmdKv508" allowfullscreen=""></iframe>
-          <a class="link-youtube" href="https://youtu.be/5hAwmdKv508" target="_blank"
+          <a class="link-youtube" href="https://youtu.be/5hAwmdKv508" target="_blank"
             rel="noopener">Ver en YouTube →</a></div>
-        <div class="video-single"><a class="link-youtube" href="https://youtu.be/5hAwmdKv508"
+        <div class="video-single"><a class="link-youtube" href="https://youtu.be/5hAwmdKv508"
             target="_blank" rel="noopener"></a><br>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
         </div>
@@ -77,16 +76,16 @@
           <p><span style="color: red;"><br>
             </span></p>
           <iframe src="https://www.youtube.com/embed/koA2vemFoMA" allowfullscreen=""></iframe>
-          <a class="link-youtube" href="https://youtu.be/koA2vemFoMA" target="_blank"
+          <a class="link-youtube" href="https://youtu.be/koA2vemFoMA" target="_blank"
             rel="noopener">Ver en YouTube →</a>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> </div>
         <!-- VÍDEO 2 -->
         <div class="video-single">
           <h3 class="video-title">Bestialc 2008 (Completo)</h3>
-          <iframe src="https://www.youtube.com/embed/https://youtu.be/S21teiZJZWA"
-            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/S21teiZJZWA"
+          <iframe src="https://www.youtube.com/embed/https://youtu.be/S21teiZJZWA"
+            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/S21teiZJZWA"
             target="_blank" rel="noopener">Ver en YouTube →</a></div>
-        <div class="video-single"><a class="link-youtube" href="https://youtu.be/S21teiZJZWA"
+        <div class="video-single"><a class="link-youtube" href="https://youtu.be/S21teiZJZWA"
             target="_blank" rel="noopener"><br>
           </a><br>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
@@ -94,10 +93,10 @@
         <!-- VÍDEO 3 -->
         <div class="video-single">
           <h3 class="video-title">II Vive Rock 2011 (Completo)</h3>
-          <iframe src="https://www.youtube.com/embed/https://youtu.be/xU8h26nwdcw"
-            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/xU8h26nwdcw"
+          <iframe src="https://www.youtube.com/embed/https://youtu.be/xU8h26nwdcw"
+            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/xU8h26nwdcw"
             target="_blank" rel="noopener">Ver en YouTube →</a></div>
-        <div class="video-single"><a class="link-youtube" href="https://youtu.be/xU8h26nwdcw"
+        <div class="video-single"><a class="link-youtube" href="https://youtu.be/xU8h26nwdcw"
             target="_blank" rel="noopener"><br>
           </a><br>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
@@ -105,10 +104,10 @@
         <!-- VÍDEO 4 -->
         <div class="video-single">
           <h3 class="video-title">Bestialc 2013 (Completo)</h3>
-          <iframe src="https://www.youtube.com/embed/https://youtu.be/_3S-OQ9hf8w"
-            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/https://youtu.be/_3S-OQ9hf8w"
+          <iframe src="https://www.youtube.com/embed/https://youtu.be/_3S-OQ9hf8w"
+            allowfullscreen=""></iframe> <a class="link-youtube" href="https://youtu.be/https://youtu.be/_3S-OQ9hf8w"
             target="_blank" rel="noopener">Ver en YouTube →</a></div>
-        <div class="video-single"><a class="link-youtube" href="https://youtu.be/https://youtu.be/_3S-OQ9hf8w"
+        <div class="video-single"><a class="link-youtube" href="https://youtu.be/https://youtu.be/_3S-OQ9hf8w"
             target="_blank" rel="noopener"><br>
           </a><br>
           <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
