--- a/index.htm
+++ b/index.htm
@@ -45,7 +45,7 @@
           alt="1ª KOMUNION"></a> </header>
     <nav class="nav-principal">
       <ul>
- <li><a href="index.htm">Inicio</a></li>
+ <li><a href="index.htm" class="active">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
