--- a/biografia.htm
+++ b/biografia.htm
@@ -10,7 +10,7 @@
     </a>
     <nav class="nav-principal">
       <ul>
- <li><a href="index.htm">Inicio</a></li>
+        <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm" class="active">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm">Imágenes</a></li>
@@ -72,8 +72,8 @@
           guasa inolvidables tanto para sus miembros como para sus seguidores.</p>
         <p class="center"><br>
         </p>
-        <p class="center"><a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
-              src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
+        <p class="center"><a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
+              src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
               width="320"></a></p>
         <p class="center"><br>
         </p>
@@ -115,7 +115,8 @@
               Siempre y Para Siempre</span></b><span lang="ES-TRAD">:</span></font>
         <br>
         <br>
-        <img src="imagenes/homenajebici.jpg"> </main>
+        <img src="imagenes/homenajebici.jpg" style="width: 315px; height: 232px;">
+      </main>
       <a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"> </a></main>
   </body>
 </html>
