--- a/discografia.htm
+++ b/discografia.htm
@@ -40,7 +40,7 @@
           Juan Morcillo, mezclado y masterizado por Juanki.<br>
           <br>
           El dibujo de la carátula y la galleta del cd, son de Carlos Azagra,
-          dibujante e El Jueves.<br>
+          dibujante de El Jueves.<br>
           <br>
           El Cd-Extra, está editado por Lemon songs, siendo la referencia
           Ref.11CD2110 y el depósito Legal D.L.CS-361-2011<br>
