--- a/discografia.htm
+++ b/discografia.htm
@@ -88,7 +88,7 @@
               mundo cambiar (J. Morcillo)</span></li>
         </ul>
       </section>
-      <hr>
+      <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>Resurrekción</h2>
         <a target="_blank" href="imagenes/dvd600.jpg"> <img src="imagenes/dvd150.jpg"
@@ -172,7 +172,7 @@
               español</span></li>
         </ul>
       </section>
-      <hr>
+       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>1ª Komunión (LP)</h2>
         <a target="_blank" href="imagenes/1komunion1.jpg"> <img src="imagenes/_1_komunion1.jpg"
@@ -231,7 +231,7 @@
         <p><br>
         </p>
         <p> </p>
-        <hr>
+         <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
         <h2>&nbsp;"Tour 89"</h2>
         <a href="imagenes/maqueta2.jpg" target="_blank"><img src="imagenes/_maqueta2.jpg"
             alt="caratula maqueta" title="maqueta" style="width: 181px; height: 115px;"></a><br>
@@ -273,7 +273,7 @@
         <ul>
         </ul>
       </section>
-      <hr>
+       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>&nbsp;"Circuito Rock"</h2>
         <a href="imagenes/singleivaj1.jpg" target="_blank"><img src="imagenes/_single_ivaj1.jpg"
@@ -291,7 +291,7 @@
         &nbsp;&nbsp;&nbsp; <span style="color: yellow;">Barrios bajos<br>
           <br>
           &nbsp;&nbsp;&nbsp; Apocalipsis II</span></section>
-      <hr>
+       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>&nbsp;El Gallinero Eléctrico Uno</h2>
         <a href="imagenes/gallinero1.jpg" target="_blank"><img src="imagenes/_gallinero1.jpg"></a><a
@@ -309,7 +309,7 @@
         Tema incluido:<br>
         <br>
         <span style="color: yellow;"> &nbsp;&nbsp;&nbsp; Nada sabrás</span></section>
-      <hr>
+      <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>Matraka Monsters</h2>
         <a href="imagenes/matraka1.jpg" target="_blank"><img src="imagenes/_matraka_1.jpg"
@@ -328,7 +328,7 @@
         &nbsp;&nbsp;&nbsp;<span style="color: yellow;"> Malditos concursos<br>
           <br>
           La fiesta</span></section>
-      <hr>
+       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>Con M de Morcillo (Tributo)</h2>
         <a href="imagenes/Morcillo1[640x480].jpg" target="_blank"><img src="imagenes/Morcillo1[150]%20[].jpg"
@@ -347,7 +347,7 @@
         <br>
         <span style="color: yellow;">&nbsp;&nbsp;&nbsp; Quería el mundo cambiar
           (J. Morcillo).</span></section>
-      <hr>
+       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>&nbsp;Rocke'n'Babia</h2>
         <a href="imagenes/babia2.jpg" target="_blank"><img src="imagenes/_babia2.jpg"
@@ -370,7 +370,7 @@
         Tema incluido:<br>
         <br>
         &nbsp;<span style="color: yellow;">&nbsp;&nbsp; Huelga de hambre</span></section>
-      <hr>
+      <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>&nbsp;HISTORIA DE LA MÚSICA POP EN CASTELLÓN</h2>
         <a href="imagenes/pop%20castellon%20800%20[800x600].jpg" target="_blank"><img
@@ -393,7 +393,7 @@
         Tema incluido:<br>
         <br>
         <span style="color: yellow;">&nbsp;&nbsp;&nbsp; Barrios bajos</span></section>
-      <hr>
+       <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>La Figa Palera</h2>
         <a href="imagenes/la_figa_palera.jpg" target="_blank"><img src="imagenes/_la_figa_palera.jpg"
@@ -416,7 +416,7 @@
           &nbsp;&nbsp;&nbsp; Mierda y sangre<br>
           <br>
           &nbsp;&nbsp;&nbsp; Irán - Irak</span></section>
-      <hr>
+      <hr style="height: 2px; background-color: #ac40f8; border: none;"> <br>
       <section class="disco">
         <h2>Heroína No!</h2>
         <a href="imagenes/antiheroina.jpg" target="_blank"><img src="imagenes/_antiheroina.jpg"
