--- a/letras.htm
+++ b/letras.htm
@@ -263,24 +263,10 @@
         <audio controls="controls" preload="none" src="audios/10%20-%20Franciskillo.mp3">
           <source src="audios/01%20-%201a%20Komunion.mp3" type="audio/mpeg"> Tu
           navegador no soporta audio HTML5. </audio><br>
-        Yo siempre quise ser<br>
-        uno de esos listillos,<br>
-        que a los 20 se hacen de oro,<br>
-        y poco después ¡Viva Cristo!.<br>
-        No se bien como se hace,<br>
-        pero lo intento día a día.<br>
-        Hace falta mucha suerte,<br>
-        y un padrino que te diga:<br>
-        &nbsp;&nbsp;&nbsp; ¡Firma aquí, vete tranquilo!<br>
-        &nbsp;&nbsp;&nbsp; Tu pellejo está a salvo, -tu mujer conmigo-.<br>
-        No me ha salido bien la historia,<br>
-        Otra vez me he dado de morros.<br>
-        Voy a comprarme una espada,<br>
-        y un capote pa los toros.<br>
-        &nbsp;&nbsp;&nbsp; ¡Firma aquí, vete tranquilo!<br>
-        &nbsp;&nbsp;&nbsp; Tu pellejo está a salvo, -tu mujer conmigo-.<br>
-        <br>
-        <p class="volver"><a href="#inicio">Volver arriba</a></p>
+ 	<br>
+        <p class="letra">
+        Yo siempre quise ser<br>uno de esos listillos,<br>que a los 20 se hacen de oro,<br>y poco después ¡Viva Cristo!.<br>No se bien como se hace,<br>pero lo intento día a día.<br>Hace falta mucha suerte,<br>y un padrino que te diga:<br>&nbsp;&nbsp;&nbsp; ¡Firma aquí, vete tranquilo!<br>&nbsp;&nbsp;&nbsp; Tu pellejo está a salvo, -tu mujer conmigo-.<br>No me ha salido bien la historia,<br>Otra vez me he dado de morros.<br>Voy a comprarme una espada,<br>y un capote pa los toros.<br>&nbsp;&nbsp;&nbsp; ¡Firma aquí, vete tranquilo!<br>&nbsp;&nbsp;&nbsp; Tu pellejo está a salvo, -tu mujer conmigo-.<br></p>
+       <p class="volver"><a href="#inicio">Volver arriba</a></p>
       </section>
       <section class="cancion">
         <h2 id="Goodway_Paco">Goodway Paco</h2>
