--- a/discografia.htm
+++ b/discografia.htm
@@ -321,7 +321,7 @@
         Se grabó entre finales de octubre y principios de noviembre en Estudios
         Waves, de Almazora. Editado por Matraka Diskak (EUKZ 003 Dep. legal:
         m-42767-91). Como anécdota, comentar que compratimos estudio con
-        Eskorbuto en la grabación de su LP "Demasiados enemigos". Y para los más frikis, decir que los dos temas están grabados con la "famosa" Gibson negra del guitarrista de Eskorbuto...   &#128513;
+        Eskorbuto en la grabación de su LP "Demasiados enemigos". Y para los más frikis, decir que los dos temas están grabados con la "famosa" Gibson Les Paul negra del guitarrista de Eskorbuto...   &#128513;
 
 <br>
         <br>
