--- a/biografia.htm
+++ b/biografia.htm
@@ -20,30 +20,30 @@
       </ul>
     </nav>
     <br>
-    <main class="contenido"><br>
-      Corría el año 1988 e internet era prácticamente un pensamiento futurista.
-      Me refiero exactamente, que menos el fútbol de 2ª regional y las veladas
-      pugilísticas de Estudio 17 (no te digo na´) todo lo demás en esa época era
-      bastante aburrido en domingo.
+    <main class="contenido">Corría el año 1988 e internet era prácticamente un
+      pensamiento futurista. Me refiero exactamente a que, menos el fútbol de 2ª
+      regional y las veladas pugilísticas de Estudio 17 (no te digo na´) todo lo
+      demás en esa época era bastante aburrido en domingo.<br>
+      <br>
+      &nbsp;&nbsp;&nbsp; Menos mal que por encima de todo se encontraba lo que
+      realmente había importado hasta la fecha y que fuese la hora que fuese, te
+      esperaba sin malos rollos y en el mismo estado de siempre. Estoy por
+      supuesto hablando de la MÚSICA.<br>
+      <br>
+      <br>
+      &nbsp;&nbsp;&nbsp; Por entonces lo más difícil siempre era encontrar a
+      alguien, que al igual que tú, estuviera dispuesto a descargar toda la
+      energía del Universo intentando emular a sus héroes musicales. Sólamente
+      había dos posibilidades: <br>
+      1ª - Los músicos en dique seco.<br>
+      2ª - Aquellos que les hervía la sangre por hacer algo que les sacara de la
+      rutina.<br>
+      <br>
+      &nbsp;Y una de las casualidades de la vida: delante de ti, sin saberlo,
+      tienes los ingredientes necesarios para cocinar el plato del que hace
+      tiempo que te sabes la receta de memoria.<br>
+      <br>
       <main class="contenido">
-        <p>Menos mal que por encima de todo se encontraba lo que realmente había
-          importado hasta la fecha y que fuese la hora que fuese, te esperaba
-          sin malos rollos y en el mismo estado de siempre. Estoy por supuesto
-          hablando de la <strong>MÚSICA</strong>.</p>
-        <p><br>
-        </p>
-        <p>Por entonces lo más difícil siempre era encontrar a alguien, que al
-          igual que tú, estuviera dispuesto a descargar toda la energía del
-          Universo intentando emular a sus héroes musicales. Solamente había dos
-          posibilidades: 1ª los músicos en dique seco 2ª aquellos que les hervía
-          la sangre por hacer algo que les sacara de la rutina.</p>
-        <p><br>
-        </p>
-        <p>Y una de las casualidades de la vida: delante de ti, sin saberlo,
-          tienes los ingredientes necesarios para cocinar el plato del que hace
-          tiempo que te sabes la receta de memoria.</p>
-        <p><br>
-        </p>
         <p class="center big rojo">Había nacido... <strong>1ª Komunión</strong>:</p>
         <section class="integrantes">
           <article class="integrante"> <img src="imagenes/Bici.jpg" alt="Antonio Bici Díaz">
@@ -64,54 +64,68 @@
             <p><span style="color: #cc33cc;">Aburrido compulsivo baterista</span></p>
           </article>
         </section>
-        <p>Y como todo el mundo sabe, este maravilloso y jugoso manjar, duró lo
-          que los comensales tardaron en rebañar el plato. Nada más y nada menos
-          que 4 magníficos años.</p>
-        <p>Por cierto, prolíficos y fructuosos años que “dieron a luz” todos
-          aquellos conciertos (unos 84 más o menos), grabaciones y sesiones de
-          guasa inolvidables tanto para sus miembros como para sus seguidores.</p>
-        <p class="center"><br>
-        </p>
-        <p class="center"><a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
-
-              src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
-
-              width="320"></a></p>
+        &nbsp;Y como todo el mundo sabe, este maravilloso y jugoso manjar, duró
+        lo que los comensales tardaron en rebañar el plato. Nada más y nada
+        menos que 4 magníficos años.<br>
+        <br>
+        &nbsp;&nbsp;&nbsp; Por cierto, prolíficos y fructuosos años que “dieron
+        a luz” todos aquellos conciertos (unos 84 más o menos), grabaciones y
+        sesiones de guasa inolvidables tanto para sus miembros como para sus
+        seguidores.<a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
+            src="imagenes/foto%20oficial%20[320x200].gif" alt="Foto oficial" height="240"
+            width="320"></a>
         <p class="center"><br>
         </p>
         Peeeerooooo...... pasaron los años, y tras 16 años sin tocar, decidimos
         resucitar con motivo del 20º aniversario de la formación del grupo.<br>
+        &nbsp;&nbsp;&nbsp; Para conmemorar dicho hito, reaparecimos&nbsp; en el
+        XIII Bestialc de L'Alcora, el 30 de agosto de 2008. <br>
+        &nbsp;&nbsp;&nbsp; Había llovido desde la última vez que Con unos pocos
+        ensayos, y en plan kamikaze, pensamos que para la ocasión debíamos hacer
+        algo que quedase ya plasmado para la posteridad, "Resurrekción" fue el
+        título de esa grabación en directo. Formato DVD por si alguien tiene
+        reproductor.<br>
+        &nbsp;&nbsp;&nbsp; Gracias a la colaboración de Lalo Cotanda: grabación
+        de Video y Montaje y Juan Carlos Tomás Castillo "Juanki": grabación de
+        audio y sobre todo al público que una vez más vino a vernos,
+        brindándonos la ocasión de vivir una noche inolvidable con su presencia.<br>
         <br>
-        Para conmemorar tal aniversario, reaparecimos actuando en el XIII
-        Bestialc de L'Alcora, el 30 de agosto de 2008.<br>
-        Con unos pocos ensayos, y en plan kamikaze, pensamos que para la ocasión
-        debíamos hacer algo que quedase ya plasmado para la posteridad, con lo
-        que gracias a la colaboración de Lalo Cotanda, Juanki y sobre todo al
-        público que una vez más vino a vernos, brindándonos la ocasión de vivir
-        una noche inolvidable con su presencia, pudimos grabar el bolo en vídeo,
-        pensando sobre todo que nuestros hijos el día de mañana puedan tirar las
-        copias a la basura pensando lo pillados que estaban sus padres.<br>
-        Y de esta forma, grabamos y editamos un DVD con la mayor parte de las
-        canciones que perpetramos en ese concierto, entrevistas, algunas
-        fotos...<br>
+        &nbsp;&nbsp;&nbsp; Y de esta forma,&nbsp; editamos un DVD con las
+        canciones que perpetramos en ese concierto, entrevistas y algunas
+        fotos... <br>
+        &nbsp;&nbsp;&nbsp; .......esperemos que nuestros nietos si los hubiere,
+        puedan hacer puntería con las copias en uno de los cuatro&nbsp;
+        contenedores ...........<br>
         <br>
-        Ya puestos en harina, en 2011 , sacamos un CD con los temas que habían
-        quedado en el tintero por grabar, y algunas colaboraciones en
-        recopilatorios y tributos.<br>
         <br>
-        Hicimos unos cuantos bolos por diferentes locales y participamos en
-        varios festivales, hasta que en 2022, por motivos de salud, nuestro
-        compañero Antonio "Bici" ya no pudo acompañarnos con su voz. Teniendo un
-        último concierto pendiente, se puso a la voz Jesús "El Madri", y a la
-        batería su hijo Ferrán.<br>
+        &nbsp;&nbsp;&nbsp; Ya puestos en harina, en 2011 , sacamos un CD con los
+        temas que habían quedado en el tintero por grabar, y algunas
+        colaboraciones en recopilatorios y tributos, como el tema de J. Morcillo
+        "Quería enl Mundo Cambiar"<br>
         <br>
-        Poco después, la voz y el alma de nuestro sonido, Antonio "Bici", nos
-        dejó prematuramente. <br>
-        Ese mismo año, en el Festival Ultrasons, decidimos hacer un último
-        concierto como homenaje a nuestro compañero y amigo, teniendo nuevamente
-        a Jesús a la voz y a Ferrán a la batería, con Carlos Medina a la
-        guitarra y los cameos de Toni y J.L. Lorente "El Chino", cantando un par
-        de temas.<br>
+        &nbsp;&nbsp;&nbsp; Hicimos unos cuantos bolos por diferentes locales y
+        participamos en varios festivales, hasta que en 2020, por motivos de
+        salud, nuestro compañero Antonio Díaz "Bici" ya no pudo acompañarnos con
+        su voz.<br>
+        Teniendo un último concierto pendiente, se puso a la voz Jesús&nbsp; "El
+        Madri" Gallardo, y a la batería su hijo Ferrán Gallardo.<br>
+        <br>
+        &nbsp;&nbsp;&nbsp; Poco después, en 2022 la voz y el alma de nuestro
+        sonido, Antonio "Bici", nos dejó prematuramente. Todavía hoy en día es
+        difícil de imaginar que no está entre nosotros. <br>
+        <br>
+        &nbsp;&nbsp;&nbsp; Ese mismo año, en el Festival Ultrasons, decidimos
+        hacer un último concierto como homenaje a nuestro compañero y amigo,
+        teniendo nuevamente a Jesús a la voz y a Ferrán a la batería, con Carlos
+        Medina a la guitarra y los cameos de Toni "X-Fanekaes" y J.L. Lorente
+        "El Xino", cantando un par de temas.<br>
+        <br>
+        &nbsp;&nbsp;&nbsp; Y .......a día de hoy cada uno sigue con la vida que
+        tiene. Sin más. <br>
+        &nbsp;&nbsp;&nbsp; Queremos dar las gracias a todos aquellos que han
+        querido siempre que volvamos desde Alcora hasta Méjico. Las
+        circunstancias son las que son. Y tan felices.<br>
+        <br>
         <br>
         <font style="color: red;" face="Verdana" size="3"><b><span lang="ES-TRAD">Por
               Siempre y Para Siempre</span></b><span lang="ES-TRAD">:</span></font>
